--- a/res/settings.json
+++ b/res/settings.json
@@ -5,6 +5,7 @@
     "defaultWindowHeight": 500,
     "minWindowWidth": 300,
     "minWindowHeight": 300,
-    "maxFrameRate": 90,
+    "maxFrameRate": 60,
+    "VSync": 1,
     "defaultBackground": [0.07, 0.13, 0.17, 1.0]
 }
