--- a/res/settings.json
+++ b/res/settings.json
@@ -1,13 +1,14 @@
 {
     "prettyOutput": true,
     "debugMode": true,
+    "simulateObjectRotation": false,
     "defaultWindowWidth": 500,
     "defaultWindowHeight": 500,
     "minWindowWidth": 300,
     "minWindowHeight": 300,
     "defaultBackground": [0.07, 0.13, 0.17, 1.0],
     "maxFrameRate": 60,
-    "VSync": 0,
+    "VSync": 1,
     "StaticFrameDelayFraction": 0.65,
     "spinDelayNS": 375
 }
