--- a/res/settings.json
+++ b/res/settings.json
@@ -10,5 +10,6 @@
     "maxFrameRate": 60,
     "VSync": 1,
     "StaticFrameDelayFraction": 0.65,
-    "spinDelayNS": 375
+    "spinDelayNS": 375,
+    "lightUpdateFrameSkip": 2
 }
