--- a/res/settings.json
+++ b/res/settings.json
@@ -1,7 +1,7 @@
 {
     "prettyOutput": true,
     "debugMode": true,
-    "simulateObjectRotation": false,
+    "simulateObjectRotation": true,
 
     "defaultWindowWidth": 500,
     "defaultWindowHeight": 500,
@@ -15,8 +15,13 @@
     "VSync": 1,
     "StaticFrameDelayFraction": 0.65,
     "spinDelayNS": 375,
-    "lightUpdateFrameSkip": 2,
+    "lightUpdateFrameSkip": 4,
+    "renderDistance": 3.5e2,
+    "cameraSensitivity": 175.0,
+    "cameraSpeed": 12.5,
 
-    "scalingMode": 1,
-    "simpleMaxScale": 7.5
+    "simulationMode": 1,
+    "simpleMaxScale": 7.5,
+    "renderScaleDistortion": 5.0e1,
+    "velocityScaleDistortion": 5.0e4
 }
