Physics frame buffer

--- a/res/settings.json
+++ b/res/settings.json
@@ -23,5 +23,6 @@
     "simulationMode": 1,
     "simpleMaxScale": 7.5,
     "renderScaleDistortion": 5.0e1,
-    "phyiscsSubsteps": 32
+    "phyiscsSubsteps": 32,
+    "phyiscsBufferedFrames": 2
 }
