FXAA implementation (credits in shader - postProcess.vert)

--- a/res/settings.json
+++ b/res/settings.json
@@ -3,6 +3,7 @@
     "debugMode": true,
     "simulateObjectRotation": true,
     "doPostProcess": true,
+    "doFXAA": true,
 
     "defaultWindowWidth": 500,
     "defaultWindowHeight": 500,
