threaded physics test

--- a/res/settings.conf
+++ b/res/settings.conf
@@ -29,6 +29,7 @@ normalizedModelRadius = 1.0
 renderScaleDistortion = 5.0e1
 physicsSubsteps = 32
 physicsBufferedFrames = 4
+physicsSteps = 60
 simulateObjectRotation = true
 
 [DEBUG]
