physics group preparation

--- a/res/settings.conf
+++ b/res/settings.conf
@@ -20,13 +20,13 @@ doFXAA = true
 [CAMERA]
 renderDistance = 3.5e2
 cameraSensitivity = 175.0
-cameraSpeed = 12.5
+cameraSpeed = 22.5
 
 [PHYSICS]
 simulationMode = 1
-simpleMaxScale = 6.0
+simpleMaxScale = 10.0
 normalizedModelRadius = 1.0
-renderScaleDistortion = 5.0e1
+renderScaleDistortion = 25.0
 physicsSubsteps = 32
 physicsBufferedFrames = 2
 physicsSteps = 60.0
