physics fix test + removed physics buffered frames as they were useless + fixed simulatinObject copy constructor

--- a/res/settings.conf
+++ b/res/settings.conf
@@ -26,9 +26,8 @@ cameraSpeed = 22.5
 simulationMode = 1
 simpleMaxScale = 10.0
 normalizedModelRadius = 1.0
-renderScaleDistortion = 25.0
+renderScaleDistortion = 5.0e1
 physicsSubsteps = 32
-physicsBufferedFrames = 2
 physicsSteps = 60.0
 simulateObjectRotation = true
 
