camera now matches orbital sizes of scenes to be in frame.

--- a/res/settings.conf
+++ b/res/settings.conf
@@ -21,6 +21,7 @@ doFXAA = true
 renderDistance = 3.5e2
 cameraSensitivity = 175.0
 cameraSpeed = 22.5
+cameraFOV = 45.0
 
 [PHYSICS]
 simulationMode = 1
