inverse colors option

--- a/res/settings.conf
+++ b/res/settings.conf
@@ -16,6 +16,7 @@ lightUpdateFrameSkip = 4
 
 doPostProcess = true
 doFXAA = true
+inverseColors = false
 
 [CAMERA]
 renderDistance = 3.5e2
@@ -25,9 +26,9 @@ cameraFOV = 45.0
 
 [PHYSICS]
 simulationMode = 1
-simpleMaxScale = 10.0
-normalizedModelRadius = 1.0
-renderScaleDistortion = 5.0e1
+simpleMaxScale = 8.5
+normalizedModelRadius = 1.75
+renderScaleDistortion = 3.5e1
 physicsSubsteps = 32
 physicsSteps = 60.0
 simulateObjectRotation = true
