Fixed deleting scenes potentially leaving uncleared classes + class pointers; ability to finetune scene zoomout in config.

--- a/res/settings.conf
+++ b/res/settings.conf
@@ -19,10 +19,12 @@ doFXAA = true
 inverseColors = false
 
 [CAMERA]
-renderDistance = 3.5e2
+renderDistance = 5.0e2
 cameraSensitivity = 175.0
 cameraSpeed = 22.5
 cameraFOV = 45.0
+
+sceneZoomModifier = 0.075
 
 [PHYSICS]
 simulationMode = 1
