--- a/res/settings.conf
+++ b/res/settings.conf
@@ -18,6 +18,10 @@ doPostProcess = true
 doFXAA = true
 inverseColors = false
 
+[GUI]
+fontSize = 15.0
+showGui = true
+
 [CAMERA]
 renderDistance = 5.0e2
 cameraSensitivity = 175.0
