temporary testing build settings

--- a/res/settings.conf
+++ b/res/settings.conf
@@ -5,7 +5,7 @@ defaultWindowHeight = 500
 minWindowWidth = 300
 minWindowHeight = 300
 
-defaultBackgroundColor = #12212B
+defaultBackgroundColor = #FFFFFF
 
 [RENDER]
 maxFrameRate = 60
