Testing build settings update

--- a/res/settings.conf
+++ b/res/settings.conf
@@ -16,14 +16,14 @@ lightUpdateFrameSkip = 4
 
 doPostProcess = true
 doFXAA = true
-inverseColors = false
+inverseColors = true
 
 [GUI]
 fontSize = 15.0
 showGui = true
 
 [CAMERA]
-renderDistance = 5.0e2
+renderDistance = 5.0e3
 cameraSensitivity = 175.0
 cameraSpeed = 50.0
 cameraFOV = 45.0
