Additional settings - UI element rounding.
Settings window is now menu as states on the acess button.

additional font options.

preparation for loading scenes.

--- a/res/settings.conf
+++ b/res/settings.conf
@@ -20,7 +20,8 @@ inverseColors = true
 
 [GUI]
 fontSize = 15.0
-showGui = true
+windowRounding = 8.0
+frameRounding = 4.0
 
 [CAMERA]
 renderDistance = 5.0e3
