Custom font loading (Roboto Mono)

--- a/res/settings.conf
+++ b/res/settings.conf
@@ -19,9 +19,10 @@ doFXAA = true
 inverseColors = true
 
 [GUI]
-fontSize = 15.0
+fontSize = 18.5
 windowRounding = 8.0
 frameRounding = 4.0
+fontFile = RobotoMono.ttf
 
 [CAMERA]
 renderDistance = 5.0e3
