--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,7 +71,7 @@ elseif(UNIX)
         target_link_libraries(simulacrum "${CMAKE_SOURCE_DIR}/dependencies/assimp/binaries/libassimp_mint.a")
         target_link_libraries(simulacrum "${CMAKE_SOURCE_DIR}/dependencies/libz/libz_mint.a")
     else()
-        message(WARNING "Precompiled packages not avaialbe for your system! Please make sure you have all necsery packages installed.")
+        message(NOTICE "Precompiled packages not avaialbe for your system! Please make sure you have all necsery packages installed. (ASSIMP, GLFW)")
         target_link_libraries(simulacrum glfw)
         target_link_libraries(simulacrum assimp)
     endif()
