--- a/res/settings.conf
+++ b/res/settings.conf
@@ -13,6 +13,7 @@ VSync = 1
 StaticFrameDelayFraction = 0.65
 spinDelayNS = 375
 lightUpdateFrameSkip = 4
+fullscreen = false
 
 doPostProcess = true
 doFXAA = true
