Scene Switching test

--- a/res/settings.conf
+++ b/res/settings.conf
@@ -5,7 +5,7 @@ defaultWindowHeight = 500
 minWindowWidth = 300
 minWindowHeight = 300
 
-defaultBackgroundColor = #FFFFFF
+defaultBackgroundColor = #000000
 
 [RENDER]
 maxFrameRate = 60
@@ -17,7 +17,7 @@ fullscreen = false
 
 doPostProcess = true
 doFXAA = true
-inverseColors = true
+inverseColors = false
 
 [GUI]
 fontSize = 18.5
