Slightly better scaling (up to future change)
planets now stop rotating when the simulation is paused.

--- a/res/settings.conf
+++ b/res/settings.conf
@@ -34,10 +34,10 @@ cameraFOV = 45.0
 sceneZoomModifier = 0.25
 
 [PHYSICS]
-simulationMode = 1
-simpleMaxScale = 8.5
-normalizedModelRadius = 1.75
-renderScaleDistortion = 3.5e1
+simulationMode = 1               ; 1 - simlified; 0 - realistic scaling
+simpleMaxScale = 6.25            ; maximum scaling
+normalizedModelRadius = 3.45     ; how big is the baseline size of a model
+renderScaleDistortion = 25.0     ; used for pushing things together
 physicsSubsteps = 32
 physicsSteps = 60.0
 simulateObjectRotation = true
