--- a/res/settings.conf
+++ b/res/settings.conf
@@ -36,6 +36,7 @@ sceneZoomModifier = 0.25
 [PHYSICS]
 simulationMode = 1               ; 1 - simlified; 0 - realistic scaling
 simpleMaxScale = 6.25            ; maximum scaling
+unifiedDistance = 20.0           ; the unified distance between planets in simplified mode
 normalizedModelRadius = 3.45     ; how big is the baseline size of a model
 renderScaleDistortion = 25.0     ; used for pushing things together
 physicsSubsteps = 32
