Ability to not simulate objects for example for low-speed orbits ot be noticible udner simplified mode.
Added configurable adjustment for the center object (star) so it wouldn't move as easily (scale adjustment)

--- a/res/settings.conf
+++ b/res/settings.conf
@@ -19,6 +19,9 @@ doPostProcess = true
 doFXAA = true
 inverseColors = false
 
+centerObjectScaleMultiplier = 20 ; if simlified scaling - adjusts how hard it would be for the center object's position change to be noticed (adjustment meant for stars)
+
+
 [GUI]
 fontSize = 18.5
 windowRounding = 8.0
