Made the gravity inclusion in initial velocity configurable

--- a/res/settings.conf
+++ b/res/settings.conf
@@ -45,6 +45,7 @@ renderScaleDistortion = 25.0     ; used for pushing things together
 physicsSubsteps = 32
 physicsSteps = 60.0
 simulateObjectRotation = true
+gravityInInitialVel = false
 
 [DEBUG]
 prettyOutput = true
