added an option to track the IRL elapsed simulation time - configurable - on / off

--- a/res/settings.conf
+++ b/res/settings.conf
@@ -46,6 +46,7 @@ physicsSubsteps = 32
 physicsSteps = 60.0
 simulateObjectRotation = true
 gravityInInitialVel = false
+trackSimTime = true
 
 [DEBUG]
 prettyOutput = true
