updated the center object scaling check to check for just stars instead.

--- a/res/settings.conf
+++ b/res/settings.conf
@@ -19,7 +19,7 @@ doPostProcess = true
 doFXAA = true
 inverseColors = false
 
-centerObjectScaleMultiplier = 20 ; if simlified scaling - adjusts how hard it would be for the center object's position change to be noticed (adjustment meant for stars)
+starScaleMultiplier = 20 ; if simlified scaling - adjusts how hard it would be for the center object's position change to be noticed (adjustment meant for stars)
 
 
 [GUI]
