added a setting to switch model size normalisation on and off

--- a/res/settings.conf
+++ b/res/settings.conf
@@ -19,6 +19,8 @@ doPostProcess = true
 doFXAA = true
 inverseColors = false
 
+assumeModleIsScaled = true ; assume models are scaled to the base size - avoids unecesery and potentially wrong model size re-basing - NOT RECOMMENDED
+
 starScaleMultiplier = 20 ; if simlified scaling - adjusts how hard it would be for the center object's position change to be noticed (adjustment meant for stars)
 
 
